@@ -1,0 +1,19 @@
+# Automatically generated file
+# Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase 0.026
+
+skip_tags: true
+
+cache:
+  - C:\strawberry -> appveyor.yml
+
+install:
+  - if not exist "C:\strawberry" cinst strawberryperl
+  - set PATH=C:\strawberry\perl\bin;C:\strawberry\perl\site\bin;C:\strawberry\c\bin;%PATH%
+  - cd C:\projects\%APPVEYOR_PROJECT_NAME%
+  - cpanm --quiet --installdeps --notest --skip-satisfied --with-develop .
+
+build_script:
+  - perl Makefile.PL
+  - set AUTOMATED_TESTING=1
+  - gmake test
+  - prove -lr xt/author
