@@ -7,6 +7,8 @@ copyright_holder = Sven Kirmess
 
 [Bootstrap::lib]
 [@Author::SKIRMESS]
+Author::SKIRMESS::RepositoryBase.stopwords[appveyor]        = appveyor
+Author::SKIRMESS::RepositoryBase.stopwords[AppVeyor]        = AppVeyor
 Author::SKIRMESS::RepositoryBase.stopwords[dist]            = dist
 Author::SKIRMESS::RepositoryBase.stopwords[perlcriticrc]    = perlcriticrc
 Author::SKIRMESS::RepositoryBase.stopwords[perltidy]        = perltidy
