@@ -15,10 +15,12 @@ add_stopwords(<DATA>);
 all_pod_files_spelling_ok( grep { -d } qw( bin lib t xt ) );
 __DATA__
 <sven.kirmess@kzone.ch>
+AppVeyor
 Kirmess
 SKIRMESS
 Sven
 TravisCI
+appveyor
 dist
 perlcriticrc
 perltidy
